<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FindAroundMe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tUrsN">Username</string>
    <string name="tPsw">Password</string>
    <string name="tDn">Date Naissance</string>
    <string name="tTel">Telephone</string>
    <string name="tMail">Mail</string>
    <string name="tCp">Code postal</string>
    <string name="btInscrit">Inscription</string>
    <string name="title_activity_gps">Gps</string>
    <string name="btLocaliser">Localiser</string>

</resources>
