<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE RelativeLayout>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/tPsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tDn"
        android:layout_alignRight="@+id/tDn"
        android:layout_below="@+id/tUsrN"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/tPsw">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/tDn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tTel"
        android:layout_below="@+id/tPsw"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/tDn" />

    <EditText
        android:id="@+id/tUsrN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tPsw"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:text="@string/tUrsN"
        android:inputType="text"/>
   

    <EditText
        android:id="@+id/tMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tTel"
        android:layout_below="@+id/tTel"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:text="@string/tMail" 
        android:inputType="text"/>

    <EditText
        android:id="@+id/tTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:text="@string/tTel" 
        android:inputType="text"/>

    <EditText
        android:id="@+id/tCp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tMail"
        android:layout_below="@+id/tMail"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:text="@string/tCp"
        android:inputType="text" />

    <Button
        android:id="@+id/btInscrire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tCp"
        android:layout_alignParentBottom="true"
        android:text="@string/btInscrit" />

</RelativeLayout>
